fix for twitter icon appearing behind image search results

--- a/single-purpose/opera/css/popup.css
+++ b/single-purpose/opera/css/popup.css
@@ -2,4 +2,5 @@
 	position: fixed;
 	bottom: -50px;
 	right: 20px;
+	z-index: 1;
 }
